# components/apimgt/org.wso2.carbon.apimgt.internal.service/src/main/resources/api.yaml
@@ -1725,6 +1725,9 @@ components:
         name:
           type: string
           description: Name of the API
+        displayName:
+          type: string
+          description: displayName of the API
         version:
           type: string
           description: Version of the API.
@@ -1777,6 +1780,14 @@ components:
         subtype:
           type: string
           description: The subtype of the API.
+          example: Default
+        revisionId:
+          type: string
+          description: UUID of the API revision deployed to the requested gateway label.
+          example: 6b53f157-3595-4d9c-a3b8-2d1f7c5e9a10
+        environment:
+          type: string
+          description: Gateway deployment label / environment name for the loaded revision.
           example: Default
     synapseArtifact:
       type: object
